--- a/index.html
+++ b/index.html
@@ -2,10 +2,60 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Inicio de mi proyecto</title>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tejidos Vivy</title>
+    <link rel="stylesheet" href="css/style.css"> <!--Conecto con mi carpeta de CSS-->
+</head> 
 <body>
-    <h1>Bienvenido a mi proyecto "Tejidos Vivy"</h1>
-    <p>En esta pagina voy a crear mi pagina web de mi emprendimiento Tejidos Vivy</p>
+    <header>
+        <img src="img/LOGOPAGINA.jpg" alt="Logo de Tejidos Vivy" width="150">
+        <h1>Bienvenidos a Tejidos Vivy</h1>
+        <p>Descubrí la historia, calidad y dedicación detras de cada pieza.</p>
+        <hr>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#catalogo">Catalogo</a></li>
+                <li><a href="#ofertas">Ofertas</a></li>
+                <li><a href="#contactos">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="catalogo">
+            <h2>Catalogo de Productos</h2>
+            
+            <article class="producto">
+                <img src="img/Blanco Cut.jpg" alt="Blanco Cut" width="200">
+                <h3>Sweater Wide Cut - Blanco</h3>
+                <p>Color: Blanco | Talle: XS-S-L-XL</p>
+                <p>Precio: $25000</p>
+                <a href="#" class="boton-comprar">Comprar</a>
+            </article>
+            
+            <article class="producto">
+                <img src="img/Negro Cut.jpg" alt="Negro Cut" width="200">
+                <h3>Sweater Wide Cut - Negro</h3>
+                <p>Color: Negro | Talle: XS-S-L-XL</p>
+                <p>Precio: $25000</p>
+                <a href="#" class="boton-comprar">Comprar</a>
+            </article>
+        </section>
+
+        <section id="contactos">
+            <h2>contacto</h2>
+            <p>Si queres hacer un pedido a traves de alguna consulta, completá este formulario</p>
+            <form action="#" method="post">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required><br><br>
+                <label for="email">Correo electrónico:</label>
+                <input type="text" id="email" name="email" required><br><br>
+                <label for="mensaje">Mensaje:</label>
+                <textarea name="mensaje" id="mensaje" rows="5" required></textarea><br><br>
+
+                <input type="submit" value="Enviar">
+            </form>
+        </section>
+    </main>
 </body>
 </html>
