Actualizo estructura de sitio con paginas separadas

--- a/catalogo.html
+++ b/catalogo.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tejidos Vivy - Inicio</title>
+    <title>Tejidos Vivy - Catálogo</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <img src="img/LOGOPAGINA.jpg" alt="Logo de Tejidos Vivy" width="150">
-        <h1>Bienvenidos a Tejidos Vivy</h1>
-        <p>Calidez, diseño y amor en cada prenda.</p>
+        <h1>Catálogo de Productos</h1>
         <hr>
         <nav>
             <ul>
@@ -23,11 +22,11 @@
     </header>
 
     <main>
-        <section id="mas-vendidos">
-            <h2>Productos más vendidos</h2>
+        <section id="catalogo">
+            <h2>Nuestros Productos</h2>
 
             <article class="producto">
-                <img src="img/Blanco Cut.jpg" alt="Sweater Blanco" width="200">
+                <img src="img/Blanco Cut.jpg" alt="Sweater Blanco">
                 <h3>Sweater Wide Cut - Blanco</h3>
                 <p>Color: Blanco | Talle: XS-S-L-XL</p>
                 <p>Precio: $25.000</p>
@@ -35,7 +34,7 @@
             </article>
 
             <article class="producto">
-                <img src="img/Negro Cut.jpg" alt="Sweater Negro" width="200">
+                <img src="img/Negro Cut.jpg" alt="Sweater Negro">
                 <h3>Sweater Wide Cut - Negro</h3>
                 <p>Color: Negro | Talle: XS-S-L-XL</p>
                 <p>Precio: $25.000</p>
@@ -43,8 +42,8 @@
             </article>
 
             <article class="producto">
-                <img src="img/beige.jpg" alt="Sweater Beige" width="200">
-                <h3>Sweater Beige Cozy</h3>
+                <img src="img/beige.jpg" alt="Sweater Beige">
+                <h3>Sweater Cozy Beige</h3>
                 <p>Color: Beige | Talle: S-M-L</p>
                 <p>Precio: $27.000</p>
                 <a href="#" class="boton-comprar">Comprar</a>
