--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <img src="img/LOGOPAGINA.jpg" alt="Logo de Tejidos Vivy" width="150">
-        <h1>Bienvenidos a Tejidos Vivy</h1>
-        <p>Calidez, diseño y amor en cada prenda.</p>
+        <h1>Tejidos Vivy</h1>
+        <p>Moda artesanal con amor y dedicación.</p>
         <hr>
         <nav>
             <ul>
@@ -23,32 +23,24 @@
     </header>
 
     <main>
-        <section id="mas-vendidos">
+        <section>
             <h2>Productos más vendidos</h2>
-
-            <article class="producto">
-                <img src="img/Blanco Cut.jpg" alt="Sweater Blanco" width="200">
-                <h3>Sweater Wide Cut - Blanco</h3>
-                <p>Color: Blanco | Talle: XS-S-L-XL</p>
-                <p>Precio: $25.000</p>
-                <a href="#" class="boton-comprar">Comprar</a>
-            </article>
-
-            <article class="producto">
-                <img src="img/Negro Cut.jpg" alt="Sweater Negro" width="200">
-                <h3>Sweater Wide Cut - Negro</h3>
-                <p>Color: Negro | Talle: XS-S-L-XL</p>
-                <p>Precio: $25.000</p>
-                <a href="#" class="boton-comprar">Comprar</a>
-            </article>
-
-            <article class="producto">
-                <img src="img/beige.jpg" alt="Sweater Beige" width="200">
-                <h3>Sweater Beige Cozy</h3>
-                <p>Color: Beige | Talle: S-M-L</p>
-                <p>Precio: $27.000</p>
-                <a href="#" class="boton-comprar">Comprar</a>
-            </article>
+            <div class="contenedor-productos">
+                <article class="producto">
+                    <img src="img/ejemplo1.jpg" alt="Producto 1">
+                    <h3>Sweater Beige Oversize</h3>
+                    <p>Talle: S - M - L</p>
+                    <p>Precio: $28.000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto">
+                    <img src="img/ejemplo2.jpg" alt="Producto 2">
+                    <h3>Chaleco Trenzado Natural</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $22.000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+            </div>
         </section>
     </main>
 
