--- a/ofertas.html
+++ b/ofertas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tejidos Vivy - Ofertas</title>
+    <title>Ofertas - Tejidos Vivy</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -22,22 +22,25 @@
     </header>
 
     <main>
-        <section id="ofertas">
-            <h2>Productos en Oferta</h2>
+        <section>
+            <h2>Productos en oferta</h2>
+            <div class="contenedor-productos">
+                <article class="producto">
+                    <img src="img/ejemplo_oferta1.jpg" alt="Producto en oferta 1">
+                    <h3>Top tejido – 20% OFF</h3>
+                    <p>Antes: $15.000</p>
+                    <p><strong>Ahora: $12.000</strong></p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
 
-            <article class="producto">
-                <img src="img/Blanco Cut.jpg" alt="Sweater Blanco">
-                <h3>Sweater Wide Cut - Blanco</h3>
-                <p>Antes: <del>$25.000</del> | Ahora: $20.000</p>
-                <a href="#" class="boton-comprar">Comprar</a>
-            </article>
-
-            <article class="producto">
-                <img src="img/Negro Cut.jpg" alt="Sweater Negro">
-                <h3>Sweater Wide Cut - Negro</h3>
-                <p>Antes: <del>$25.000</del> | Ahora: $20.000</p>
-                <a href="#" class="boton-comprar">Comprar</a>
-            </article>
+                <article class="producto">
+                    <img src="img/ejemplo_oferta2.jpg" alt="Producto en oferta 2">
+                    <h3>Chaleco gris – 10% OFF</h3>
+                    <p>Antes: $22.000</p>
+                    <p><strong>Ahora: $19.800</strong></p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+            </div>
         </section>
     </main>
 
