--- a/ofertas.html
+++ b/ofertas.html
@@ -1,45 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tejidos Vivy - Ofertas</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ofertas - Tejidos Vivy</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <img src="img/LOGOPAGINA.jpg" alt="Logo de Tejidos Vivy" width="150">
-    <h1>Ofertas Especiales</h1>
-    <hr>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="catalogo.html">Catálogo</a></li>
-        <li><a href="ofertas.html">Ofertas</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="carrito.html">Carrito 🛒</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <img src="img/LOGOPAGINA.jpg" alt="Logo de Tejidos Vivy" width="150">
+        <h1>Ofertas Especiales</h1>
+        <hr>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="catalogo.html">Catálogo</a></li>
+                <li><a href="ofertas.html">Ofertas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section>
-      <h2>Productos en Oferta</h2>
-      <div class="contenedor-productos">
-        <article class="producto">
-          <img src="img/ejemplo.jpg" alt="Producto 1">
-          <h3>Sweater Otoñal</h3>
-          <p><del>$25.000</del> <strong>$20.000</strong></p>
-          <button class="boton-comprar" data-nombre="Sweater Otoñal" data-precio="20000">Comprar</button>
-        </article>
-      </div>
-    </section>
-  </main>
+    <main>
+        <section>
+            <h2>Productos en oferta</h2>
+            <div class="contenedor-productos">
+                <article class="producto">
+                    <img src="img/ejemplo_oferta1.jpg" alt="Producto en oferta 1">
+                    <h3>Top tejido – 20% OFF</h3>
+                    <p>Antes: $15.000</p>
+                    <p><strong>Ahora: $12.000</strong></p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
 
-  <footer>
-    <p>&copy; 2025 Tejidos Vivy</p>
-  </footer>
+                <article class="producto">
+                    <img src="img/ejemplo_oferta2.jpg" alt="Producto en oferta 2">
+                    <h3>Chaleco gris – 10% OFF</h3>
+                    <p>Antes: $22.000</p>
+                    <p><strong>Ahora: $19.800</strong></p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+            </div>
+        </section>
+    </main>
 
-  <script src="js/script.js"></script>
+    <footer>
+        <p>&copy; 2025 Tejidos Vivy</p>
+    </footer>
 </body>
 </html>
