--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Tejidos Vivy</title>
+    <title>Tejidos Vivy - Contacto</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,21 +21,22 @@
         </nav>
     </header>
 
-    <main id="contactos">
-        <h2>Contactanos</h2>
-        <p>Si querés hacer un pedido o tenés una consulta, completá este formulario:</p>
-        <form id="form-contacto" action="#" method="post">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required><br><br>
+    <main>
+        <section id="contactos">
+            <h2>Envianos tu consulta</h2>
+            <form id="form-contacto" action="#" method="post">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required><br><br>
 
-            <label for="email">Correo electrónico:</label>
-            <input type="text" id="email" name="email" required><br><br>
+                <label for="email">Correo electrónico:</label>
+                <input type="text" id="email" name="email" required><br><br>
 
-            <label for="mensaje">Mensaje:</label>
-            <textarea name="mensaje" id="mensaje" rows="5" required></textarea><br><br>
+                <label for="mensaje">Mensaje:</label>
+                <textarea name="mensaje" id="mensaje" rows="5" required></textarea><br><br>
 
-            <input type="submit" value="Enviar">
-        </form>
+                <input type="submit" value="Enviar">
+            </form>
+        </section>
     </main>
 
     <footer>
