--- a/index.html
+++ b/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tejidos Vivy - Inicio</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tejidos Vivy - Inicio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <img src="img/LOGOPAGINA.jpg" alt="Logo de Tejidos Vivy" width="150">
-    <h1>Bienvenidos a Tejidos Vivy</h1>
-    <p>Descubrí la historia, calidad y dedicación detrás de cada pieza.</p>
-    <hr>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="catalogo.html">Catálogo</a></li>
-        <li><a href="ofertas.html">Ofertas</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="carrito.html">Carrito 🛒</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <img src="img/LOGOPAGINA.jpg" alt="Logo de Tejidos Vivy" width="150">
+        <h1>Tejidos Vivy</h1>
+        <p>Moda artesanal con amor y dedicación.</p>
+        <hr>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="catalogo.html">Catálogo</a></li>
+                <li><a href="ofertas.html">Ofertas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section>
-      <h2>Productos Más Vendidos</h2>
-      <div class="contenedor-productos">
-        <article class="producto">
-          <img src="img/Blanco Cut.jpg" alt="Sweater Blanco">
-          <h3>Sweater Wide Cut - Blanco</h3>
-          <p>$25.000</p>
-          <button class="boton-comprar" data-nombre="Sweater Wide Cut - Blanco" data-precio="25000">Comprar</button>
-        </article>
-        <article class="producto">
-          <img src="img/Negro Cut.jpg" alt="Sweater Negro">
-          <h3>Sweater Wide Cut - Negro</h3>
-          <p>$25.000</p>
-          <button class="boton-comprar" data-nombre="Sweater Wide Cut - Negro" data-precio="25000">Comprar</button>
-        </article>
-      </div>
-    </section>
-  </main>
+    <main>
+        <section>
+            <h2>Productos más vendidos</h2>
+            <div class="contenedor-productos">
+                <article class="producto">
+                    <img src="img/ejemplo1.jpg" alt="Producto 1">
+                    <h3>Sweater Beige Oversize</h3>
+                    <p>Talle: S - M - L</p>
+                    <p>Precio: $28.000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto">
+                    <img src="img/ejemplo2.jpg" alt="Producto 2">
+                    <h3>Chaleco Trenzado Natural</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $22.000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+            </div>
+        </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2025 Tejidos Vivy</p>
-  </footer>
-
-  <script src="js/script.js"></script>
+    <footer>
+        <p>&copy; 2025 Tejidos Vivy</p>
+    </footer>
 </body>
 </html>
