--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                     <img src="img/ejemplo1.jpg" alt="Producto 1">
                     <h3>Sweater Beige Oversize</h3>
                     <p>Talle: S - M - L</p>
-                    <p>Precio: $28.000</p>
+                    <p>Precio: $28000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
                 <article class="producto">
                     <img src="img/ejemplo2.jpg" alt="Producto 2">
                     <h3>Chaleco Trenzado Natural</h3>
                     <p>Talle: M - L</p>
-                    <p>Precio: $22.000</p>
+                    <p>Precio: $22000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
             </div>
@@ -47,5 +47,7 @@
     <footer>
         <p>&copy; 2025 Tejidos Vivy</p>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
