--- a/ofertas.html
+++ b/ofertas.html
@@ -28,16 +28,16 @@
                 <article class="producto">
                     <img src="img/ejemplo_oferta1.jpg" alt="Producto en oferta 1">
                     <h3>Top tejido – 20% OFF</h3>
-                    <p>Antes: $15.000</p>
-                    <p><strong>Ahora: $12.000</strong></p>
+                    <p>Antes: $15000</p>
+                    <p>Precio: $12000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
 
                 <article class="producto">
                     <img src="img/ejemplo_oferta2.jpg" alt="Producto en oferta 2">
                     <h3>Chaleco gris – 10% OFF</h3>
-                    <p>Antes: $22.000</p>
-                    <p><strong>Ahora: $19.800</strong></p>
+                    <p>Antes: $22000</p>
+                    <p>Precio: $19800</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
             </div>
@@ -47,5 +47,7 @@
     <footer>
         <p>&copy; 2025 Tejidos Vivy</p>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
