--- a/contacto.html
+++ b/contacto.html
@@ -23,8 +23,8 @@
 
     <main id="contactos">
         <div>
-            <h2>Contactanos</h2>
-            <p>Si querés hacer un pedido o tenés una consulta, completá este formulario:</p>
+            <h2> - Finalizar Compra</h2>
+            <p>Si querés finalizar la compra necesitamos tus siguientes datos (Detallar talle en Mensaje de los productos):</p>
             <form id="form-contacto" action="#" method="post">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required><br><br>
