--- a/catalogo.html
+++ b/catalogo.html
@@ -51,10 +51,22 @@
                 </article>
 
                 <article class="producto" data-categoria="chaleco">
-                    <img src="img/ejemplo_chaleco.jpg" alt="Chaleco ejemplo">
-                    <h3>Chaleco tejido beige</h3>
-                    <p>Talle: S - M</p>
-                    <p>Precio: $20000</p>
+                    <img src="img/chaleco1.png" alt="Chaleco ejemplo">
+                    <h3>Chaleco Violeta</h3>
+                    <p>Talle: S - M - L</p>
+                    <p>Precio: $15000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+
+                    <img src="img/chaleco2.png" alt="Chaleco ejemplo">
+                    <h3>Chaleco Gamuza</h3>
+                    <p>Talle: S - M - L</p>
+                    <p>Precio: $15000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+
+                    <img src="img/chaleco3.png" alt="Chaleco ejemplo">
+                    <h3>Chaleco Plush Azul</h3>
+                    <p>Talle: S - M - L</p>
+                    <p>Precio: $15000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
 
