--- a/catalogo.html
+++ b/catalogo.html
@@ -51,25 +51,29 @@
                 </article>
 
                 <article class="producto" data-categoria="chaleco">
-                    <img src="img/chaleco1.png" alt="Chaleco ejemplo">
+                    <img src="img/chaleco1.png" alt="Chaleco Violeta">
                     <h3>Chaleco Violeta</h3>
-                    <p>Talle: S - M - L</p>
-                    <p>Precio: $15000</p>
-                    <a href="#" class="boton-comprar">Comprar</a>
-
-                    <img src="img/chaleco2.png" alt="Chaleco ejemplo">
-                    <h3>Chaleco Gamuza</h3>
-                    <p>Talle: S - M - L</p>
-                    <p>Precio: $15000</p>
-                    <a href="#" class="boton-comprar">Comprar</a>
-
-                    <img src="img/chaleco3.png" alt="Chaleco ejemplo">
-                    <h3>Chaleco Plush Azul</h3>
                     <p>Talle: S - M - L</p>
                     <p>Precio: $15000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
 
+                <article class="producto" data-categoria="chaleco">
+                    <img src="img/chaleco2.png" alt="Chaleco Gamuza">
+                    <h3>Chaleco Gamuza</h3>
+                    <p>Talle: S - M - L</p>
+                    <p>Precio: $15000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+
+                <article class="producto" data-categoria="chaleco">
+                    <img src="img/chaleco3.png" alt="Chaleco Plush Azul">
+                    <h3>Chaleco Plush Azul</h3>
+                    <p>Talle: S - M - L</p>
+                    <p>Precio: $15000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                
                 <article class="producto" data-categoria="polera">
                     <img src="img/ejemplo_polera.jpg" alt="Polera ejemplo">
                     <h3>Polera cuello alto</h3>
