--- a/catalogo.html
+++ b/catalogo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo - Tejidos Vivy</title>
+    <link rel="icon" type="image/x-icon" href="img/LOGOPAGINA.jpg">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -35,7 +36,35 @@
 
             <div class="contenedor-productos">
                 <article class="producto" data-categoria="sweater">
-                    <img src="img/ejemplo_sweater.jpg" alt="Sweater ejemplo">
+                    <img src="img/sweater1.png" alt="Sweater ejemplo">
+                    <h3>Sweater lana artesanal</h3>
+                    <p>Talle: M - L - XL</p>
+                    <p>Precio: $25000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto" data-categoria="sweater">
+                    <img src="img/sweater2.png" alt="Sweater ejemplo">
+                    <h3>Sweater lana artesanal</h3>
+                    <p>Talle: M - L - XL</p>
+                    <p>Precio: $25000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                                <article class="producto" data-categoria="sweater">
+                    <img src="img/sweater3.png" alt="Sweater ejemplo">
+                    <h3>Sweater lana artesanal</h3>
+                    <p>Talle: M - L - XL</p>
+                    <p>Precio: $25000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto" data-categoria="sweater">
+                    <img src="img/sweater4.png" alt="Sweater ejemplo">
+                    <h3>Sweater lana artesanal</h3>
+                    <p>Talle: M - L - XL</p>
+                    <p>Precio: $25000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                    <article class="producto" data-categoria="sweater">
+                    <img src="img/sweater5.png" alt="Sweater ejemplo">
                     <h3>Sweater lana artesanal</h3>
                     <p>Talle: M - L - XL</p>
                     <p>Precio: $25000</p>
@@ -43,8 +72,36 @@
                 </article>
 
                 <article class="producto" data-categoria="saco">
-                    <img src="img/ejemplo_saco.jpg" alt="Saco ejemplo">
-                    <h3>Saco largo de abrigo</h3>
+                    <img src="img/sacos1.png" alt="Saco ejemplo">
+                    <h3>Saco Multi Color</h3>
+                    <p>Talle: M - L - XL</p>
+                    <p>Precio: $20000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto" data-categoria="saco">
+                    <img src="img/sacos2.png" alt="Saco ejemplo">
+                    <h3>Saco Tricolor</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $20000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto" data-categoria="saco">
+                    <img src="img/sacos3.png" alt="Saco ejemplo">
+                    <h3>Saco Largo Beige</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $30000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto" data-categoria="saco">
+                    <img src="img/sacos4.png" alt="Saco ejemplo">
+                    <h3>Saco Largo Verde</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $30000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto" data-categoria="saco">
+                    <img src="img/sacos5.png" alt="Saco ejemplo">
+                    <h3>Saco largo Blanco y Negro</h3>
                     <p>Talle: M - L</p>
                     <p>Precio: $30000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
@@ -57,7 +114,6 @@
                     <p>Precio: $15000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
-
                 <article class="producto" data-categoria="chaleco">
                     <img src="img/chaleco2.png" alt="Chaleco Gamuza">
                     <h3>Chaleco Gamuza</h3>
@@ -65,7 +121,6 @@
                     <p>Precio: $15000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
-
                 <article class="producto" data-categoria="chaleco">
                     <img src="img/chaleco3.png" alt="Chaleco Plush Azul">
                     <h3>Chaleco Plush Azul</h3>
@@ -75,26 +130,76 @@
                 </article>
                 
                 <article class="producto" data-categoria="polera">
-                    <img src="img/ejemplo_polera.jpg" alt="Polera ejemplo">
-                    <h3>Polera cuello alto</h3>
+                    <img src="img/poleras1.png" alt="Polera ejemplo">
+                    <h3>Polera Morley Tostado</h3>
                     <p>Talle: M - L</p>
-                    <p>Precio: $27000</p>
+                    <p>Precio: $15000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto" data-categoria="polera">
+                    <img src="img/poleras2.png" alt="Polera ejemplo">
+                    <h3>Polera Marron y Negra</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $15000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto" data-categoria="polera">
+                    <img src="img/poleras3.png" alt="Polera ejemplo">
+                    <h3>Polera Rombo Corta</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $15000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto" data-categoria="polera">
+                    <img src="img/poleras4.png" alt="Polera ejemplo">
+                    <h3>Polera Corta</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $15000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
 
+
                 <article class="producto" data-categoria="gorro">
-                    <img src="img/ejemplo_gorro.jpg" alt="Gorro ejemplo">
-                    <h3>Gorro tejido a mano</h3>
-                    <p>Color: Rojo</p>
+                    <img src="img/gorros.png" alt="Gorro ejemplo">
+                    <h3>Gorros</h3>
+                    <p>Color a elección</p>
                     <p>Precio: $8000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
 
                 <article class="producto" data-categoria="top">
-                    <img src="img/ejemplo_top.jpg" alt="Top ejemplo">
-                    <h3>Top tejido verano</h3>
+                    <img src="img/tops1.png" alt="Top ejemplo">
+                    <h3>Tops</h3>
+                    <p>Talle: S - M - L</p>
+                    <p>Precio: $10000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                    <article class="producto" data-categoria="top">
+                    <img src="img/tops2.png" alt="Top ejemplo">
+                    <h3>Top</h3>
                     <p>Talle: S - M</p>
-                    <p>Precio: $12000</p>
+                    <p>Precio: $10000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                    <article class="producto" data-categoria="top">
+                    <img src="img/tops3.png" alt="Top ejemplo">
+                    <h3>Top</h3>
+                    <p>Talle: S - M</p>
+                    <p>Precio: $10000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                    <article class="producto" data-categoria="top">
+                    <img src="img/tops4.png" alt="Top ejemplo">
+                    <h3>Top</h3>
+                    <p>Talle: S - M</p>
+                    <p>Precio: $10000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                    <article class="producto" data-categoria="top">
+                    <img src="img/tops5.png" alt="Top ejemplo">
+                    <h3>Top</h3>
+                    <p>Talle: S - M</p>
+                    <p>Precio: $10000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
             </div>
