--- a/ofertas.html
+++ b/ofertas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ofertas - Tejidos Vivy</title>
+    <link rel="icon" type="image/x-icon" href="img/LOGOPAGINA.jpg">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
