--- a/ofertas.html
+++ b/ofertas.html
@@ -27,18 +27,18 @@
             <h2>Productos en oferta</h2>
             <div class="contenedor-productos">
                 <article class="producto">
-                    <img src="img/ejemplo_oferta1.jpg" alt="Producto en oferta 1">
-                    <h3>Top tejido – 20% OFF</h3>
+                    <img src="img/buzo5.jpeg" alt="Producto en oferta 1">
+                    <h3>Wide Cut Blanco – 20% OFF</h3>
                     <p>Antes: $15000</p>
                     <p>Precio: $12000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
 
                 <article class="producto">
-                    <img src="img/ejemplo_oferta2.jpg" alt="Producto en oferta 2">
-                    <h3>Chaleco gris – 10% OFF</h3>
-                    <p>Antes: $22000</p>
-                    <p>Precio: $19800</p>
+                    <img src="img/buzo6.jpeg" alt="Producto en oferta 2">
+                    <h3>Wide Cut Negro – 10% OFF</h3>
+                    <p>Antes: $15000</p>
+                    <p>Precio: $12000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
             </div>
