--- a/index.html
+++ b/index.html
@@ -28,17 +28,38 @@
             <h2>Productos más vendidos</h2>
             <div class="contenedor-productos">
                 <article class="producto">
-                    <img src="img/ejemplo1.jpg" alt="Producto 1">
-                    <h3>Sweater Beige Oversize</h3>
+                    <img src="img/buzo.jpeg" alt="Producto 1">
+                    <h3>Buzo Rojo</h3>
                     <p>Talle: S - M - L</p>
-                    <p>Precio: $28000</p>
+                    <p>Precio: $25000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
                 <article class="producto">
-                    <img src="img/ejemplo2.jpg" alt="Producto 2">
-                    <h3>Chaleco Trenzado Natural</h3>
+                    <img src="img/buzo1.jpeg" alt="Producto 2">
+                    <h3>Buzo Verde Muzgo</h3>
                     <p>Talle: M - L</p>
-                    <p>Precio: $22000</p>
+                    <p>Precio: $25000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto">
+                    <img src="img/buzo2.jpeg" alt="Producto 2">
+                    <h3>Buzo Violeta</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $25000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                <article class="producto">
+                    <img src="img/buzo3.jpeg" alt="Producto 2">
+                    <h3>Buzo Blanco</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $25000</p>
+                    <a href="#" class="boton-comprar">Comprar</a>
+                </article>
+                                <article class="producto">
+                    <img src="img/buzo4.jpeg" alt="Producto 2">
+                    <h3>Buzo Beige</h3>
+                    <p>Talle: M - L</p>
+                    <p>Precio: $25000</p>
                     <a href="#" class="boton-comprar">Comprar</a>
                 </article>
             </div>
